<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_drug"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AEFFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_drug_name_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#BE66A3E4"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:rotationX="0"
            android:rotationY="0"
            android:text="@string/rozpoznawanie_nazw_lekow"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/TextView_drug_name_inn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/nazwa_leku"
            android:textColor="#000000"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_drug_name_inn_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_drug_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/opis"
            android:textColor="#000000"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/TextView_drug_description_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/button_copy"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/kopiuj"
            android:textSize="20sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_capture"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/wybierz_zdjecie"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>